--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <script defer rel="preconnect" src="https://kit.fontawesome.com/2878399314.js" crossorigin="anonymous"></script>
+    <title>WEB</title>
   </head>
   <body>
     <div id="root"></div>
