--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer rel="preconnect" src="https://kit.fontawesome.com/2878399314.js" crossorigin="anonymous"></script>
-    <title>WEB</title>
+    <title>WEBS</title>
   </head>
   <body>
     <div id="root"></div>
